Changes from 1.20 branch